fixed collapsing margin

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -42,7 +42,6 @@ html {
 .page-title {
 	text-align: center;
 	width: 90%;
-	margin: 10px auto 15px;
 	color: #333;
 	font-family: $font-heading;
 	text-shadow: 0 3px 1px $color-grey;
