--- a/css/home.scss
+++ b/css/home.scss
@@ -9,7 +9,8 @@
  */
 
 .home.page .page-title {
-	margin-top: 30px;
+	margin: 0 auto 15px;
+	padding-top: 30px;
 
 	&::before {
 		content: '👋';
