--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,6 @@ html {
 .page-title {
   text-align: center;
   width: 90%;
-  margin: 10px auto 15px;
   color: #333;
   font-family: "Roboto Slab", "Lucida Bright", serif;
   text-shadow: 0 3px 1px #cfcfcf;
