--- a/css/work.scss
+++ b/css/work.scss
@@ -25,6 +25,10 @@
 	top: 0;
 	left: 0;
 
+	.page-title {
+		margin: 10px auto 15px;
+	}
+
 	.social-icon {
 		max-width: 40px;
 		margin: 0 10px 15px 10px;
